flipswitch/core/main/default/objects/FlipSwitch_Rule_Condition__c/FlipSwitch_Rule_Condition__c.object-meta.xml
<CustomObject>
    <description>Individual conditions within a compound FlipSwitch rule. Used for AND/OR logic evaluation.</description>
    <label>FlipSwitch Rule Condition</label>
    <nameField>
        <displayFormat>COND-{0000000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlipSwitch Rule Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>