flipswitch/core/main/default/objects/FlipSwitch_Rule_Condition__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>User</fullName><default>false</default><label>User</label></value>
            <value><fullName>Profile</fullName><default>false</default><label>Profile</label></value>
            <value><fullName>Permission_Set</fullName><default>false</default><label>Permission Set</label></value>
            <value><fullName>Segment</fullName><default>false</default><label>Segment</label></value>
            <value><fullName>Custom_Field</fullName><default>false</default><label>Custom Field</label></value>
            <value><fullName>Percentage</fullName><default>false</default><label>Percentage</label></value>
            <value><fullName>Account</fullName><default>false</default><label>Account</label></value>
            <value><fullName>Territory</fullName><default>false</default><label>Territory</label></value>
            <value><fullName>Account_Segment</fullName><default>false</default><label>Account Segment</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>