flipswitch/core/main/default/objects/FlipSwitch_Rule_Condition__c/fields/Condition_Value__c.field-meta.xml
<CustomField>
    <fullName>Condition_Value__c</fullName>
    <label>Condition Value</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>