flipswitch/core/main/default/objects/FlipSwitch_Rule_Condition__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <type>MasterDetail</type>
    <referenceTo>FlipSwitch_Rule__c</referenceTo>
    <relationshipLabel>Rule Conditions</relationshipLabel>
    <relationshipName>Rule_Conditions</relationshipName>
</CustomField>